BUD-552 Add category reorder endpoint
